center toasts on mobile (fixes #36)

--- a/src/input/input-password/InputPassword.css
+++ b/src/input/input-password/InputPassword.css
@@ -28,14 +28,13 @@
 	min-height: 1.5rem;
 	color: var(--ui-color-text-dark-2);
 }
+.theme-light .input-password .input-password-button { color: var(--ui-color-text-light-2); }
+
+
 .input-password .input-password-button svg { width: 100%; height: 100%; }
 
-.theme-light .input-password .input-password-button {
-	color: var(--ui-color-text-light-2);
-}
-
-.input-password.visible .input-password { font-family: inherit; }
-
+.input-password.visible .input-password-input { font-family: inherit; }
+.input-password.visible .input-password-button { color: var(--ui-color-danger); }
 
 
 
